--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^9.8.6",
     "del-cli": "^3.0.1",
     "dotenv": "^8.2.0",
+    "@11ty/eleventy": "^0.11.0",
     "markdown-it": "^10.0.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^5.3.0",
@@ -32,8 +33,5 @@
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.7.0"
-  },
-  "devDependencies": {
-    "@11ty/eleventy": "^0.11.0"
   }
 }
